const_typed_builder_test/compile_fail/group_and_mandatory_3.stderr
error: Can't use both mandatory and group
  --> ./compile_fail/group_and_mandatory_3.rs:10:19
   |
10 |         #[builder(group = quz)]
   |                   ^^^^^

warning: Group can only be satisfied if all fields are initialized. Consider removing group and using [builder(mandatory)] instead
 --> ./compile_fail/group_and_mandatory_3.rs:5:13
  |
5 |     #[group(quz = single)]
  |             ^^^
